@@ -1,3 +1,10 @@
+2011-02-21  Leif Madsen <lmadsen@digium.com>
+
+	* Asterisk 1.6.1.22 Released.
+
+	* AST-2011-002: Multiple array overflow and crash vulnerabilities in
+	  UDPTL code
+
 2011-01-17  Leif Madsen <lmadsen@digium.com>
 
 	* Asterisk 1.6.1.21 Released.
